rust crate for contracts

--- a/contracts/makefile
+++ b/contracts/makefile
@@ -2,9 +2,6 @@
 all: src/*.proto
 	mkdir -p rust/src
 	protoc --rust_out rust/src src/*
+	(cd rust; cargo build --release)
 	mkdir -p go
 	protoc --go_out go src/*
-
-clean:
-	rm -rf rust/src
-	rm -rf go
