--- a/contracts/rust/Cargo.toml
+++ b/contracts/rust/Cargo.toml
@@ -2,3 +2,6 @@
 name = "contracts"
 version = "0.1.0"
 authors = ["John P Mayer Jr <john.p.mayer.jr@gmail.com>"]
+
+[dependencies.protobuf]
+git = "https://github.com/stepancheg/rust-protobuf.git"
