clean up contracts and step

--- a/contracts/makefile
+++ b/contracts/makefile
@@ -1,7 +1,17 @@
 
-all: src/*.proto
-	mkdir -p rust/src
-	protoc --rust_out rust/src src/*
+all: rust go
+
+rust/target/release/libcontracts.rlib: rust/src/*.rs
 	(cd rust; cargo build --release)
-	mkdir -p go
+
+rust/src/%.rs: src/%.proto
+	protoc --rust_out rust/src src/*
+
+rust: rust/target/release/libcontracts.rlib
+
+go/src/%.pb.go: src/%.proto
 	protoc --go_out go src/*
+
+go: go/src/*.pb.go
+
+.PHONY: rust go
