client converts controls into protobuffer, sends bytes, server can inspect length of bytes

--- a/client/makefile
+++ b/client/makefile
@@ -1,7 +1,7 @@
 
 all: site/js/celestia.js
 
-site/js/celestia.js: *.elm
+site/js/celestia.js: *
 	elm make Demo.elm --output site/js/celestia.js
 
 clean:
