go to rust is working

--- a/server/makefile
+++ b/server/makefile
@@ -1,8 +1,9 @@
+ROOT_DIR := $(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 
 all: server
 
 server: *.go
 	gofmt -w *go
 	go get
-	go build
+	go build -ldflags="-r $(ROOT_DIR)lib"
 
