--- a/server/makefile
+++ b/server/makefile
@@ -2,7 +2,7 @@ ROOT_DIR := $(dir $(realpath $(lastword $(MAKEFILE_LIST))))
 
 all: server
 
-server: *.go lib/*
+server: *.go lib/* include/*
 	gofmt -w *go
 	go get
 	go build -ldflags="-r $(ROOT_DIR)lib"
