--- a/sim/Cargo.toml
+++ b/sim/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["dylib"]
 [dependencies]
 nalgebra = "*"
 ncollide = "*"
+ncollide_entities = "*"
 num = "*"
 
 [dependencies.contracts]
