--- a/peer/Cargo.toml
+++ b/peer/Cargo.toml
@@ -4,4 +4,6 @@ version = "0.1.0"
 authors = ["John P Mayer, Jr <john.p.mayer.jr@gmail.com>"]
 
 [dependencies]
+protobuf = "1.0.18"
 rotor-stream = "0.6.2"
+
