--- a/space_server/build.gradle
+++ b/space_server/build.gradle
@@ -54,8 +54,11 @@ configurations.all {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
-    maven { url "file:///maven-local/" }
+    // maven { url "file:///maven-local/" }
+    maven { url "file:///G:/maven-local/" }
+    // maven { url "http://jmpspace.com.s3-website-us-east-1.amazonaws.com" }
 }
 
 dependencies {
@@ -65,6 +68,8 @@ dependencies {
   compile "co.paralleluniverse:spacebase-core:${spacebaseVer}${classifier}"
 
   "com.google.protobuf:protobuf-java:${protobufVersion}"
+
+  compile "com.vividsolutions:jts:1.13"
 
   compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.5'
   compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.5'
