--- a/space_server/build.gradle
+++ b/space_server/build.gradle
@@ -80,6 +80,8 @@ dependencies {
 
   compile 'org.apache.commons:commons-lang3:3.0'
 
+  compile 'org.jooq:jool:0.9.11'
+
   "com.google.protobuf:protobuf-java:${protobufVersion}"
 
 //    compile "org.dyn4j:dyn4j:3.2.2"
